[project]
name = "esa-tui"
version = "0.1.0"
description = "TUI for Alibaba Cloud ESA management"
authors = [
    {name = "delvinwang-inno"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alibabacloud-esa20240910 (>=2.38.0,<3.0.0)",
    "alibabacloud-tea-openapi (>=0.4.4,<0.5.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "textual (>=8.2.3,<9.0.0)"
]

[tool.poetry]
packages = [
    { include = "modules" },
    { include = "views" },
    { include = "main.py" }
]

[project.scripts]
esa-tui = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
